--- a/style.css
+++ b/style.css
@@ -97,25 +97,32 @@ p {
 }
 
 .address {
-	margin: 20px 0;
-	margin-top: 30px;
+	margin: 10px 0;
+	align-items: center;
+	justify-content: center;
+	margin-top: 20px;
 	width: 100%;
-	font-size: 20px;
+	font-size: 11px;
 	font-weight: bold;
 }
 
 .address address {
 	text-align: center;
+	align-items: center;
+	justify-content: center;
 	text-decoration: none;
 	font-style: normal;
 }
 
 .maps {
-	margin-top: 20px;
+	margin-top: 0px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	width: 100%;
+	align-items: center;
+		justify-content: center;
+	width: 90%;
+	margin-right: 5%;
 	justify-content: center;
 	align-items: center;
 }
@@ -123,7 +130,7 @@ p {
 .map-item {
 	border-radius: 9999px;
 	width: 100%;
-	height: 46px;
+	height: 25px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
