--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 	direction: rtl;
 }
 
+
 h1 {
 	font-size: 32px;
 }
@@ -118,7 +119,7 @@ p {
 	margin-top: 0px;
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	gap: 1vh;
 	align-items: center;
 		justify-content: center;
 	width: 90%;
